# Battle-City

./: .gitignore  generate_solution.bat
Battle City/: CMakeLists.txt
Battle City/src/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  main.cpp
Battle City/src/Factories/: TextFactory.cpp  TextFactory.h
Battle City/src/GameStructs/: GameObject.h  Wall.cpp  Wall.h
Battle City/src/LevelManager/: LevelManager.h
Battle City/src/SceneManager/: Scene.h  SceneManager.cpp  SceneManager.h
Battle City/src/Scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
res/: levels.json  parameters.json
